arreglo de iframe

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </ul>
             </div>
         </nav>
-        <iframe src="https://open.spotify.com/embed/playlist/454agwtm8k9OqkHhElkFPH?theme=0"width="15%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+        <iframe src="https://open.spotify.com/embed/playlist/454agwtm8k9OqkHhElkFPH?theme=0" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         <h1>Dragon Ball All</h1>
     </header>
     <main>
