--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
     <meta name="author" content="nahuel risso">
     <!-- Titulo -->
     <title>DragonBallAll</title>
+     <!-- Icono -->
+     <link rel="icon" href="assets/img/logodb.png">
      <!-- Boostrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <!-- Css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html"><img class="img-logo" src="assets/img/logodb.png" alt="logodb"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item  dropdown">
+    <header class="container-fluid">
+        <section class="row">    
+          <div class="col-lg-12 col-xs-12 div-nav">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="assets/img/logodb.png" alt="logodb"></a>
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>                  
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                      <li class="nav-item">
+                        <a class="nav-link " href="index.html">Home<span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="pages/sagas.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sagas</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="pages/sagas.html#section-todas">Todas</a>
@@ -45,18 +49,25 @@
                             <a class="dropdown-item" href="pages/musica.html#Ending">Ending</a>
                         </div>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="pages/personajes.html">Personajes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="pages/videojuegos.html">Videojuegos</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <iframe src="https://open.spotify.com/embed/playlist/454agwtm8k9OqkHhElkFPH?theme=0" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        <h1>Dragon Ball All</h1>
-    </header>
+                      <li class="nav-item ">
+                        <a class="nav-link" href="pages/personajes.html">Personajes</a>
+                      </li>
+                      <li class="nav-item ">
+                        <a class="nav-link" href="pages/videojuegos.html">Videojuegos</a>
+                      </li>
+                    </ul>
+                  </div>
+                </nav>
+          </div>
+        </section>
+      </header>
+      <article class="Container">
+        <section class="row">
+          <div class="col-xs-12 col-xl-12">
+            <h1>DragonBallAll</h1>
+        </div>
+        </section>
+      </article>
     <main>
 <!-- Primer Articulo -->
         <article class="container-fluid articulo-uno-index">
