--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -9,47 +9,52 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            <a class="navbar-brand" href="../index.html"><img class="img-logo" src="../assets/img/logodb.png" alt="logodb"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="../index.html">Home<span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item  dropdown">
-                        <a class="nav-link dropdown-toggle" href="sagas.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sagas</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="sagas.html#section-todas">Todas</a>
-                            <a class="dropdown-item" href="sagas.html#section-db">DragonBall</a>
-                            <a class="dropdown-item" href="sagas.html#section-dbz">DragonBall Z</a>
-                            <a class="dropdown-item" href="sagas.html#section-dbgt">DragonBall GT</a>
-                            <a class="dropdown-item" href="sagas.html#section-dbs">DragonBall Super</a>
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Musica</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="musica.html">Todo</a>
-                            <a class="dropdown-item" href="musica.html#opening">Opening</a>
-                            <a class="dropdown-item" href="musica.html#Ending">Ending</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="personajes.html">Personajes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="videojuegos.html">Videojuegos</a>
-                    </li>
+  <header class="container-fluid">
+    <section class="row">    
+      <div class="col-lg-12 col-xs-12 div-nav">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+              <a class="navbar-brand" href="#"><img class="nav-img-logo" src="../assets/img/logodb.png" alt="logodb"></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>                  
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link " href="../index.html">Home<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="../pages/sagas.html" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Sagas</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="../pages/sagas.html">Todas</a>
+                        <a class="dropdown-item" href="../pages/sagas.html#section-db">DragonBall</a>
+                        <a class="dropdown-item" href="../pages/sagas.html#section-dbz">DragonBall Z</a>
+                        <a class="dropdown-item" href="../pages/sagas.html#section-dbgt">DragonBall GT</a>
+                        <a class="dropdown-item" href="../pages/sagas.html#section-dbs">DragonBall Super</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Musica</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="../pages/musica.html">Todo</a>
+                        <a class="dropdown-item" href="../pages/musica.html#opening">Opening</a>
+                        <a class="dropdown-item" href="../pages/musica.html#Ending">Ending</a>
+                    </div>
+                </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="../pages/personajes.html">Personajes</a>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="../pages/videojuegos.html">Videojuegos</a>
+                  </li>
                 </ul>
-            </div>
-        </nav>
-        <iframe src="https://open.spotify.com/embed/playlist/454agwtm8k9OqkHhElkFPH?theme=0"width="15%" height="80" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-        <h1>Personajes</h1>
-    </header>
+              </div>
+            </nav>
+      </div>
+      <div class="col-xs-12 col-xl-12">
+          <h1>Personajes</h1>
+      </div>
+    </section>
+  </header>
     <main class="main-personajes">
         <article class="container-fluid container-lista">
             <section class="row">
