--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="col-lg-12 col-xs-12">
                     <h2>Distribucion</h2>
                 </div>
-                <div class="col-lg-3 col-xs-12">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-xs-12 div-card-flex">
                     <div class="card">
                         <img src="assets/img/manga.jpg" class="card-img card-img-1" alt="manga-db">
                         <div class="card-body">
@@ -103,7 +103,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-3 col-xs-12">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-xs-12 div-card-flex">
                     <div class="card">
                         <img src="assets/img/anime.jpg" class="card-img card-img-2 " alt="anime-db">
                         <div class="card-body">
@@ -112,7 +112,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-3 col-xs-12">
+                <div class="col-xl-6 col-lg-6 col-md-6 col-xs-12 div-card-flex">
                     <div class="card">
                         <img src="assets/img/dragonballzkakarot.jpg" class="card-img card-img-3" alt="videojuego-db">
                         <div class="card-body">
@@ -121,7 +121,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-3 col-xs-12">
+                <div class="col-xl-6 col-lg-6  col-md-6 col-xs-12 div-card-flex">
                     <div class="card">
                         <img src="assets/img/juguete.jpg" class="card-img card-img-4" alt="juguete-db">
                         <div class="card-body">
