movile de sagas

--- a/pages/sagas.html
+++ b/pages/sagas.html
@@ -50,11 +50,15 @@
                   </div>
                 </nav>
           </div>
-          <div class="col-xs-12 col-xl-12">
-              <h1>Sagas</h1>
-          </div>
         </section>
       </header>
+      <article class="container container-h1-sagas">
+          <section class="row">
+            <div class="col-xs-12 col-xl-12">
+                <h1>Sagas</h1>
+            </div>
+          </section>
+      </article>
     <main class="container-sagas">
         <article class="container article-redireccion">
             <section class="row">
@@ -104,7 +108,7 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDePilaf.jpg" class="card-img-top" alt="Saga_de_Pilaf">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de Pilaf</h5>
@@ -114,7 +118,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaDeTorneo1.jpg" class="card-img-top" alt="Torneo_n21">
                                 <div class="card-body">
                                   <h5 class="card-title">El 21° Torneo de las Artes Marciales</h5>
@@ -124,7 +128,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDeLpr.jpg" class="card-img-top" alt="saga_rr">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de El Ejército de la Patrulla Roja</h5>
@@ -134,7 +138,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDeUranai.jpg" class="card-img-top" alt="saga_uranai">
                                 <div class="card-body">
                                   <h5 class="card-title">El Palacio de Uranai Baba</h5>
@@ -144,7 +148,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDeTorneo2.jpg" class="card-img-top" alt="torneo_n22">
                                 <div class="card-body">
                                   <h5 class="card-title">El 22° Torneo de las Artes Marciales</h5>
@@ -154,7 +158,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDePiccolo.jpg" class="card-img-top" alt="saga_poccolo">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de Piccolo Daimaku</h5>
@@ -164,7 +168,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDeTorneo3.jpg" class="card-img-top" alt="torneo_n23">
                                 <div class="card-body">
                                   <h5 class="card-title">El 23° Torneo de las Artes Marciales</h5>
@@ -1122,7 +1126,7 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaSaiyajin.jpg" class="card-img-top" alt="sagaSaiyajin">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de los Saiyajin</h5>
@@ -1132,7 +1136,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaFreezer.jpg" class="card-img-top" alt="sagaFreezer">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de Freezer</h5>
@@ -1142,7 +1146,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaCell.jpg" class="card-img-top" alt="sagaCell">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de los androides y Cell</h5>
@@ -1152,7 +1156,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaMajinbuu.jpg" class="card-img-top" alt="sagaMajinbuu">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de MajinBuu</h5>
@@ -2672,7 +2676,7 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaEsferas.jpg" class="card-img-top" alt="Saga_de_Esferas">
                                 <div class="card-body">
                                   <h5 class="card-title"> Saga de el gran viaje</h5>
@@ -2682,7 +2686,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaBaby.jpg" class="card-img-top" alt="saga_Baby">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de Baby</h5>
@@ -2692,7 +2696,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaSuper17.jpg" class="card-img-top" alt="saga_Super17">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de Súper N.°17</h5>
@@ -2702,7 +2706,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaDragones.jpg" class="card-img-top" alt="saga_Dragones">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de los Dragones Oscuros</h5>
@@ -3153,7 +3157,7 @@
                         </ol>
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaLBDLD.jpg" class="card-img-top" alt="SagaLBDLD">
                                 <div class="card-body">
                                   <h5 class="card-title">Sage de la batalla de los dioses</h5>
@@ -3163,7 +3167,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaLRDF.jpg" class="card-img-top" alt="sagaLRDF">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de la resurrección de Freezer</h5>
@@ -3173,7 +3177,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-carrucel-card"src="../assets/img/sagaEU6.jpg" class="card-img-top" alt="sagaEU6">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de el universo 6</h5>
@@ -3183,7 +3187,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                            <div class="card" style="width: 25rem;height: 500px;">
+                            <div class="card">
                                 <img class="img-card-vertical"src="../assets/img/sagaBG.jpg" class="card-img-top" alt="sagaBG">
                                 <div class="card-body">
                                   <h5 class="card-title">Saga de Black Goku</h5>
@@ -3193,7 +3197,7 @@
                               </div>
                           </div>
                           <div class="carousel-item">
-                              <div class="card" style="width: 25rem;height: 500px;">
+                              <div class="card">
                                   <img class="img-card-vertical"src="../assets/img/sagaETDP.jpg" class="card-img-top" alt="sagaETDP">
                                   <div class="card-body">
                                     <h5 class="card-title">Saga del torneo del poder</h5>
