--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header class="container-fluid">
-        <section class="row">    
+        <section class="row-fluid">    
           <div class="col-lg-12 col-xs-12 div-nav">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                   <a class="navbar-brand" href="#"><img class="nav-img-logo" src="assets/img/logodb.png" alt="logodb"></a>
@@ -61,7 +61,7 @@
           </div>
         </section>
       </header>
-      <article class="Container">
+      <article class="container-fluid">
         <section class="row">
           <div class="col-xs-12 col-xl-12">
             <h1>Dragon Ball All</h1>
@@ -90,7 +90,7 @@
  <!-- Segundo Articulo -->
 
         <article class="container-fluid articulo-dos-index">
-            <section class="row">
+            <section class="row-fluid">
                 <div class="col-lg-12 col-xs-12">
                     <h2>Distribucion</h2>
                 </div>
