cambio de header,footer y sagas movile

--- a/pages/musica.html
+++ b/pages/musica.html
@@ -13,7 +13,7 @@
         <section class="row">    
           <div class="col-lg-12 col-xs-12 div-nav">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="../assets/img/logodb.png" alt="logodb"></a>
+                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="../assets/img/logoNav.png" alt="logodb"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                  
@@ -50,19 +50,23 @@
                   </div>
                 </nav>
           </div>
-          <div class="col-xs-12 col-xl-12">
-              <h1>Musica</h1>
-          </div>
         </section>
       </header>
+      <article class="container-fluid">
+          <section class="row">
+            <div class="col-xs-12 col-xl-12">
+                <h1>Musica</h1>
+            </div>
+          </section>
+      </article>
     <main class="container-musica">
-        <article class="conteiner">
+        <article class="conteiner img-musica-direccion">
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
-                    <a href="musica.html#opening"><img class="img-musica-direccion"src="../assets/img/opening.jpg" alt="Opening"></a>
+                    <a href="musica.html#opening"><img src="../assets/img/opening.jpg" alt="Opening"></a>
                 </div>
                 <div class="col-lg-6 col-xs-12">
-                    <a href="musica.html#ending"><img class="img-musica-direccion"src="../assets/img/ending.jpg" alt="Ending"></a>
+                    <a href="musica.html#ending"><img src="../assets/img/ending.jpg" alt="Ending"></a>
                 </div>
             </section>
         </article>
@@ -77,12 +81,12 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>La Fantástica Aventura</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/9Hbd1QeI1Og" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/9Hbd1QeI1Og" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
                 <div class="col-lg-6 col-xs-12">
                     <p>Cha-La Head-Cha-La</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/cie7scVUdQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/cie7scVUdQE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -90,11 +94,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>El Poder Nuestro es</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/YWboc_Dp_xk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/YWboc_Dp_xk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Mi Corazón Encantado</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wgZ-ATUGXDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/wgZ-ATUGXDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -102,11 +106,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Vuela, pega y esquiva</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_37jJAl1c0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/_37jJAl1c0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Supera tus Límites, Superviviente</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TrVBBdSH6t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/TrVBBdSH6t4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -121,12 +125,12 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Romance Te Puedo Dar</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JXr6MJHiF40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/JXr6MJHiF40" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
                 <div class="col-lg-6 col-xs-12">
                     <p>Sal de Ahí Magnífico Poder</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/mppCJLD2Oek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/mppCJLD2Oek" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -134,11 +138,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Ángeles Fuimos</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yxNwwFISv3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/yxNwwFISv3c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Mi Corazón Encantado</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/wgZ-ATUGXDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/wgZ-ATUGXDw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -146,11 +150,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Caprichosa eres tu</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QETq5Ds_aQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/QETq5Ds_aQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Hello Hello Hello</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/GKpW_mccaTo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/GKpW_mccaTo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -159,11 +163,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Starring Star</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Sq3kbPfqtrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Sq3kbPfqtrk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Light Pink</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/BevexhzHra0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/BevexhzHra0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -171,11 +175,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Forever Dreaming</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/nOg-zE5ikfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/nOg-zE5ikfo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Yoka Yoka Dance!</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/iuGrCWAomTk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/iuGrCWAomTk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -183,11 +187,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Chaohan Music</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Uk79G-SI2Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/Uk79G-SI2Yo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Aku no Tenshi to Seigi no Akuma</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HeA3-bOMqGc?start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/HeA3-bOMqGc?start=37" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -195,11 +199,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>Boogie Back</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/BiSiqwCeNvM?start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/BiSiqwCeNvM?start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>Haruka</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RnYzX17MHCU?start=20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/RnYzX17MHCU?start=20" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
@@ -207,11 +211,11 @@
             <section class="row">
                 <div class="col-lg-6 col-xs-12">
                     <p>70cm SHIHOU NO MADOBE</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/79Nst3-iw38?start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/79Nst3-iw38?start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 col-xs-12">
                     <p>LAGRIMA</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PrsCqufhBgg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/PrsCqufhBgg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </section>
         </article>
