--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -50,110 +50,102 @@
               </div>
             </nav>
       </div>
-      <div class="col-xs-12 col-xl-12">
-          <h1>Videojuegos</h1>
-      </div>
     </section>
   </header>
+  <article class="container-fluid">
+    <section class="row">
+      <div class="col-xs-12 col-xl-12">
+        <h1>Videojuegos</h1>
+    </div>
+    </section>
+  </article>
     <main class="container-videojuegos">
-        <article class="container">
+        <article class="container article-videojuegos-width">
             <section class="row">
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1986">1986</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1987">1987</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1988">1988</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1989">1989</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1990">1990</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1991">1991</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1992">1992</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1993">1993</a>
                 </div>
-            </section>
-        </article>
-        <article class="container">
-            <section class="row">
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                    <a href="videojuegos.html#1994">1994</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                    <a href="videojuegos.html#1995">1995</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1996">1996</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#1997">1997</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2002">2002</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2003">2003</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2004">2004</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2005">2005</a>
                 </div>
-            </section>
-        </article>
-        <article class="container">
-            <section class="row">
-               <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+               <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                 <a href="videojuegos.html#2006">2006</a>
                </div>
-               <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+               <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                  <a href="videojuegos.html#2007">2007</a>
                </div>
-               <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+               <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                   <a href="videojuegos.html#2008">2008</a>
                </div>
-               <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+               <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                  <a href="videojuegos.html#2009">2009</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                   <a href="videojuegos.html#2010">2010</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                   <a href="videojuegos.html#2011">2011</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2013">2013</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2014">2014</a>
                 </div>    
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2015">2015</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2016">2016</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2018">2018</a>
                 </div>
-                <div class="col-lg-1 col-xs-12 div-top-videojuegos">
+                <div class="col-lg-1 col-xs-1 div-top-videojuegos">
                     <a href="videojuegos.html#2020">2020</a>
                 </div>
-            </section>
-        </article>
-        <article class="container">
-            <section class="row">
                 <div class="col-lg-12 col-xs-12">
                     <h3 id="1986">1986</h3>
                 </div>
