--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section class="row-fluid">    
           <div class="col-lg-12 col-xs-12 div-nav">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="assets/img/logodb.png" alt="logodb"></a>
+                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="assets/img/logoNav.png" alt="logodb"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                  
@@ -42,8 +42,8 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Musica</a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Musica</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
                             <a class="dropdown-item" href="pages/musica.html">Todo</a>
                             <a class="dropdown-item" href="pages/musica.html#opening">Opening</a>
                             <a class="dropdown-item" href="pages/musica.html#Ending">Ending</a>
@@ -75,7 +75,7 @@
                 <div class="col-lg-12 col-xs-12">
                     <h2>Historia</h2>
                 </div>
-                <div class="col-lg-8 col-xs-12">
+                <div class="col-lg-12 col-xs-12">
                     <p>
                         Dragon Ball (ドラゴンボール lit. Bola de dragón/Esfera del dragón?) es un manga escrito e ilustrado por Akira Toriyama. Fue publicado originalmente en la revista Shōnen Jump, de la editorial japonesa Shūeisha, entre 1984 y 1995.1​2​ Su trama describe las aventuras de Gokū, un guerrero saiyajin, cuyo fin es proteger a la Tierra de otros seres que quieren conquistarla y exterminar a la humanidad. Conforme transcurre la trama, conoce a otros personajes que le ayudan en este propósito. El nombre de la serie proviene de unas esferas mágicas que al ser reunidas invocan a un dragón que concede deseos. En varias ocasiones resultan útiles tanto para Gokū y sus amigos como para la humanidad, aunque también son procuradas de forma constante por algunos seres malignos.
         
@@ -90,11 +90,11 @@
  <!-- Segundo Articulo -->
 
         <article class="container-fluid articulo-dos-index">
-            <section class="row-fluid">
+            <section class="row">
                 <div class="col-lg-12 col-xs-12">
                     <h2>Distribucion</h2>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-xs-12 div-card-flex">
+                <div class="col-xl-3 col-lg-6 col-md-12 col-xs-1 div-card-flex">
                     <div class="card">
                         <img src="assets/img/manga.jpg" class="card-img card-img-1" alt="manga-db">
                         <div class="card-body">
@@ -103,7 +103,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-xs-12 div-card-flex">
+                <div class="col-xl-3 col-lg-6 col-md-12 col-xs-1 div-card-flex">
                     <div class="card">
                         <img src="assets/img/anime.jpg" class="card-img card-img-2 " alt="anime-db">
                         <div class="card-body">
@@ -112,7 +112,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-md-6 col-xs-12 div-card-flex">
+                <div class="col-xl-3 col-lg-6 col-md-12 col-xs-1 div-card-flex">
                     <div class="card">
                         <img src="assets/img/dragonballzkakarot.jpg" class="card-img card-img-3" alt="videojuego-db">
                         <div class="card-body">
@@ -121,7 +121,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-xl-6 col-lg-6  col-md-6 col-xs-12 div-card-flex">
+                <div class="col-xl-3 col-lg-6  col-md-12 col-xs-1 div-card-flex">
                     <div class="card">
                         <img src="assets/img/juguete.jpg" class="card-img card-img-4" alt="juguete-db">
                         <div class="card-body">
