--- a/pages/sagas.html
+++ b/pages/sagas.html
@@ -13,7 +13,7 @@
         <section class="row">    
           <div class="col-lg-12 col-xs-12 div-nav">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="../assets/img/logodb.png" alt="logodb"></a>
+                  <a class="navbar-brand" href="#"><img class="nav-img-logo" src="../assets/img/logoNav.png" alt="logodb"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                  
