--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DragonBallAll es una pagina donde podras encontrar todo lo referido con el anime de Dragon Ball.">
     <meta name="keywords" content=" Dragon ball,dragon ball z,dragon ball gt,dragon ball super,episodios,personajes,videojuegos,musica,manga,anime,juguetes">
-    <meta name="author" content="nahuel risso">
+    <meta name="author" content="Nahuel Risso">
     <!-- Titulo -->
     <title>DragonBallAll</title>
      <!-- Icono -->
