--- a/pages/musica.html
+++ b/pages/musica.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <!-- Metadatos-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dragon ball Z</title>
+    <meta name="description" content="DragonBallAll te organiza los openings y endings de todas las sagas de Dragon Ball.">
+    <meta name="keywords" content=" Dragon ball,dragon ball z,dragon ball gt,dragon ball super,opening,ending,musica,canciones.">
+    <meta name="author" content="Nahuel Risso">
+    <!-- Titulo -->
+    <title>DragonBallAll</title>
+     <!-- Icono -->
+     <link rel="icon" href="../assets/img/logodb.png">
+     <!-- Boostrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- Css -->
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
