cambio de E en musica

--- a/pages/musica.html
+++ b/pages/musica.html
@@ -46,7 +46,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="../pages/musica.html">Todo</a>
                             <a class="dropdown-item" href="../pages/musica.html#opening">Opening</a>
-                            <a class="dropdown-item" href="../pages/musica.html#Ending">Ending</a>
+                            <a class="dropdown-item" href="../pages/musica.html#ending">Ending</a>
                         </div>
                     </li>
                       <li class="nav-item ">
